added card component

--- a/index.html
+++ b/index.html
@@ -17,7 +17,40 @@
       </div>
     </header>
     <main>
-      <div class="container"></div>
+      <div class="container">
+        <div class="cards">
+          <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/4834/4834559.png" alt="" class="icon">
+            <h2 class="temperature">21°C</h2>
+            <p class="weather-description">Mostly cloudy</p>
+          </div>
+          <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/4834/4834559.png" alt="" class="icon">
+            <h2 class="temperature">21°C</h2>
+            <p class="weather-description">Mostly cloudy</p>
+          </div>
+          <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/4834/4834559.png" alt="" class="icon">
+            <h2 class="temperature">21°C</h2>
+            <p class="weather-description">Mostly cloudy</p>
+          </div>
+          <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/4834/4834559.png" alt="" class="icon">
+            <h2 class="temperature">21°C</h2>
+            <p class="weather-description">Mostly cloudy</p>
+          </div>
+          <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/4834/4834559.png" alt="" class="icon">
+            <h2 class="temperature">21°C</h2>
+            <p class="weather-description">Mostly cloudy</p>
+          </div>
+          <div class="card">
+            <img src="https://cdn-icons-png.flaticon.com/512/4834/4834559.png" alt="" class="icon">
+            <h2 class="temperature">21°C</h2>
+            <p class="weather-description">Mostly cloudy</p>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="container"></div>
