--- a/index.html
+++ b/index.html
@@ -13,11 +13,48 @@
   <div id="app">
     <header>
       <div class="container">
-        <h1>Neon Weather</h1>
+        <h1 class="title">Neon Weather</h1>
       </div>
     </header>
     <main>
       <div class="container">
+        <div class="main-info">
+          <div class="city-info">
+            <img src="https://cdn-icons-png.flaticon.com/512/4834/4834559.png" alt="" class="icon">
+            <h2 class="temperature"></h2>
+            <h3 id="feels_like">feels like</h3>
+            <p class="weather-description"></p>
+          </div>
+          <div class="city-info">
+            <img
+              src="https://cdn.icon-icons.com/icons2/3192/PNG/512/temperature_thermometer_cold_warm_hot_icon_194270.png"
+              alt="" class="icon">
+            <h3 id="max">Max: </h3>
+            <h3 id="min">Min: </h3>
+          </div>
+          <div class="city-info">
+            <img src="https://www.freeiconspng.com/thumbs/sun-icon/sun-icon-31.png" alt="" class="icon">
+            <h3 id="sunrise">sunrise: </h3>
+            <h3 id="sunset">sunset: </h3>
+          </div>
+          <div class="city">
+            <img src="https://cdn-icons-png.flaticon.com/512/3253/3253488.png" alt="" class="icon">
+            <h2 id="name">Kokkola</h2>
+          </div>
+        </div>
+        <div class="wind-humidity">
+          <div class="wrap">
+            <div class="wind-info">
+              <img src="https://cdn-icons-png.freepik.com/256/5825/5825932.png" alt="" class="icon">
+              <h2 id="wind-speed">Wind: </h2>
+            </div>
+            <div class="humidity-info">
+              <img src="https://flaticons.net/icon.php?slug_category=miscellaneous&slug_icon=humidity" alt=""
+                class="icon">
+              <h2 id="Humidity">Humidity: </h2>
+            </div>
+          </div>
+        </div>
         <div class="cards">
           <div class="card">
             <img src="https://cdn-icons-png.flaticon.com/512/4834/4834559.png" alt="" class="icon">
@@ -53,7 +90,9 @@
       </div>
     </main>
     <footer>
-      <div class="container"></div>
+      <div class="container">
+        <h3>developed by <a class="author" href="https://github.com/srgdd0">Serhii Didenko</a></h3>
+      </div>
     </footer>
   </div>
   <script type="module" src="/main.js"></script>
